# YT_Shorts

./: LICENSE  README.md  pyproject.toml
.claude/: launch.json  settings.local.json
app/: captions.py  crop.py  main.py  pipeline.py  render.py  schemas.py  select_clips.py  transcribe.py
static/: app.js  index.html  style.css
